# kuf

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.tsx  index.tsx  state.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/kuf.app/Contents/: Info.plist
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/fs/: local.rs  mod.rs  sftp.rs  transfer.rs
src-tauri/src/ssh/: config.rs  connection.rs  known_hosts.rs  mod.rs
src/components/: BookmarkDialog.tsx  ConnectDialog.tsx  Dialog.tsx  FileList.tsx  FileViewer.tsx  Pane.tsx  SettingsDialog.tsx  StatusBar.tsx  TabBar.tsx
