[package]
name = "kuf"
version = "0.1.0"
edition = "2021"

[lib]
name = "kuf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
toml = "0.8"
ssh2 = "0.9"
ssh2-config = "0.2"
tokio = { version = "1", features = ["rt", "sync"] }
