[package]
name = "kuf"
version = "0.1.0"
edition = "2021"

[lib]
name = "kuf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
toml = "0.8"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "rt-multi-thread", "macros", "io-util", "net"] }
